--- a/components/progressbar/progressbar.module.scss
+++ b/components/progressbar/progressbar.module.scss
@@ -22,7 +22,9 @@
     height: calc(100% + 20px);
 
     > span {
-      transform: translateX(-50%) translateY(-2rem);
+      padding-left: 1rem;
+      font-size: 1.3rem;
+      transform: translateX(-50%) translateY(-3rem);
       position: absolute;
     }
   }
