--- a/components/layout/global.scss
+++ b/components/layout/global.scss
@@ -30,7 +30,7 @@ html {
 }
 
 body {
-  background-image: url("./../../assets/bg.svg");
+  background-image: url("data:image/svg+xml,%3Csvg width='730' height='963' viewBox='0 0 730 963' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='584.365' cy='333.368' r='397.505' transform='rotate(-17 584.365 333.368)' fill='url(%23paint0_linear_6_176)' /%3E%3Ccircle cx='824.823' cy='-54.924' r='397.505' transform='rotate(-17 824.823 -54.924)' fill='url(%23paint1_linear_6_176)' /%3E%3Ccircle cx='1060.48' cy='333.087' r='397.505' transform='rotate(-17 1060.48 333.087)' fill='url(%23paint2_linear_6_176)' /%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear_6_176' x1='908.12' y1='217.223' x2='295.171' y2='417.708' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%2398255F' /%3E%3Cstop offset='1' stop-color='%231E1A1C' stop-opacity='0.52' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_6_176' x1='742.022' y1='214.105' x2='884.213' y2='-250.98' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%2398255F' /%3E%3Cstop offset='1' stop-color='%231E1A1C' stop-opacity='0.52' /%3E%3C/linearGradient%3E%3ClinearGradient id='paint2_linear_6_176' x1='919.802' y1='-5.20505' x2='1118.19' y2='454.824' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%2398255F' /%3E%3Cstop offset='1' stop-color='%231E1A1C' stop-opacity='0.52' /%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: top right;
 }
